# uvlink

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: ci-checks.yml  ci-tests.yml  docs.yml  publish.yml
docs/: CHANGELOG.md  contributing.md  index.md  installation.md  usage.md
docs/fig/: uvlink.tape
src/uvlink/: __init__.py  cli.py  path.py  path_utils.py  project.py
tests/: test_cli.py  test_path_utils.py  test_project.py
