[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.9.9,<0.10" ]

[project]
name = "uvlink"
version = "0.8.0"
description = "CLI helper for keeping Python venvs outside synced project folders"
readme = "README.md"
authors = [
  { name = "Cory Chu", email = "cory@gwlab.page" },
]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "rich>=14.2",
  "typer>=0.20",
]

urls.Changelog = "https://c0rychu.github.io/uvlink/CHANGELOG/"
urls.Documentation = "https://c0rychu.github.io/uvlink/"
urls.Homepage = "https://github.com/c0rychu/uvlink"
urls.Issues = "https://github.com/c0rychu/uvlink/issues"
urls.Repository = "https://github.com/c0rychu/uvlink.git"
scripts.uvlink = "uvlink.cli:app"

[dependency-groups]
dev = [
  "pre-commit>=4.4",
  "pyproject-fmt>=2.11.1",
  "pyright>=1.1.407",
  "pytest>=9.0.1",
  "pytest-cov>=7",
  "ruff>=0.14.5",
  "zensical>=0.0.9",
]

[tool.ruff]
line-length = 88
format.indent-style = "space"
format.quote-style = "double"

# See https://docs.astral.sh/ruff/rules/ for rule codes.
lint.select = [
  "B",   # flake8-bugbear (finds likely bugs and design problems)
  "E",   # pycodestyle errors
  "F",   # Pyflakes (finds actual errors like unused imports/variables)
  "I",   # isort (sorts imports automatically)
  "N",   # pep8-naming (enforces naming conventions)
  "RUF", # ruff-specific rules
  "SIM", # flake8-simplify (detects code that can be simplified)
  "UP",  # pyupgrade (modernizes syntax automatically, e.g. f-strings)
  "W",   # pycodestyle warnings
]
lint.ignore = [
  "RUF023", # {}.__slots__ is not sorted
]

[tool.pyrefly]
python-interpreter-path = ".venv/bin/python"
project-includes = [ "src", "tests" ]
search-path = [ "src" ]

[tool.pyright]
typeCheckingMode = "strict"
include = [ "src" ]
